[fw] Add time service and button module

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -20,7 +20,7 @@ PORT = usb
 # Project name
 PROJ = ws2812b-light
 # Source files
-SRC  = system.cpp main.cpp led_controller.cpp                            \
+SRC  = system.cpp main.cpp led_controller.cpp time_service.cpp buttons.cpp \
        animations/none.cpp animations/rainbow.cpp animations/drip.cpp
 
 CPPFLAGS  = -I. -DF_CPU=$(DEF_FREQ)UL -D__$(DEF_MCU)__
