[fw] Improve rainbow animation

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -21,7 +21,7 @@ PORT = usb
 PROJ = ws2812b-light
 # Source files
 SRC  = system.cpp main.cpp led_controller.cpp time_service.cpp buttons.cpp \
-       tools/button_filter.cpp                                             \
+       tools/button_filter.cpp tools/color.cpp                             \
        animations/off.cpp animations/color.cpp animations/rainbow.cpp      \
        animations/sparks.cpp
 
