[fw] Add retro animation

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -30,6 +30,7 @@ SRC  =  \
     $(addprefix animations/,  \
         color.cpp  \
         rainbow.cpp  \
+        retro.cpp  \
         sparks.cpp  \
     )
 
