[fw] Turn on better code optimizations

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -36,9 +36,9 @@ SRC  =  \
     animation_list.cpp
 
 CPPFLAGS  = -I. -DF_CPU=$(DEF_FREQ)UL -D__$(DEF_MCU)__
-CFLAGS    = -c -ggdb -Os -mmcu=$(MCU)
-CXXFLAGS  = -std=c++14 -c -ggdb -Os -std=c++14 -fno-exceptions -mmcu=$(MCU)
-LDFLAGS   = -ggdb -Og -mmcu=$(MCU)
+CFLAGS    = -c -ggdb -O2 -mmcu=$(MCU)
+CXXFLAGS  = -std=c++14 -c -ggdb -O2 -std=c++14 -fno-exceptions -mmcu=$(MCU)
+LDFLAGS   = -ggdb -O2 -mmcu=$(MCU)
 LDLIBS    =
 SIZEFLAGS = -C --mcu=$(MCU)
 
