--- a/fw/Makefile
+++ b/fw/Makefile
@@ -38,7 +38,7 @@ SRC  =  \
 CPPFLAGS  = -I. -DF_CPU=$(DEF_FREQ)UL -D__$(DEF_MCU)__
 CFLAGS    = -c -ggdb -O2 -mmcu=$(MCU)
 CXXFLAGS  = -std=c++14 -c -ggdb -O2 -std=c++14 -fno-exceptions -mmcu=$(MCU)
-LDFLAGS   = -ggdb -O2 -mmcu=$(MCU)
+LDFLAGS   = -ggdb -O2 -mmcu=$(MCU) -Wl,-Map=$(PROJ).map
 LDLIBS    =
 SIZEFLAGS = -C --mcu=$(MCU)
 
