[fw] Add simple shifting color animation

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -32,6 +32,7 @@ SRC  =  \
         rainbow.cpp  \
         retro.cpp  \
         twinkle.cpp  \
+        shifting_color.cpp  \
     )  \
     animation_list.cpp
 
