--- a/fw/Makefile
+++ b/fw/Makefile
@@ -40,8 +40,8 @@ SRC  =  \
     animation_list.cpp
 
 CPPFLAGS  = -I. -DF_CPU=$(DEF_FREQ)UL -D__$(DEF_MCU)__ -DLED_ORDER=$(LED_ORDER)
-CFLAGS    = -c -ggdb -O2 -mmcu=$(MCU)
-CXXFLAGS  = -c -ggdb -O2 -mmcu=$(MCU) -std=c++14 -fno-exceptions
+CFLAGS    = -c -ggdb -O2 -Wall -Wno-array-bounds -mmcu=$(MCU)
+CXXFLAGS  = -c -ggdb -O2 -Wall -Wno-array-bounds -mmcu=$(MCU) -std=c++14 -fno-exceptions
 LDFLAGS   = -ggdb -O2 -mmcu=$(MCU) -Wl,-Map=$(PROJ).map
 LDLIBS    =
 SIZEFLAGS = -C --mcu=$(MCU)
