build(fw): do not include dependency files when cleaning

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -64,7 +64,9 @@ DEP = $(OBJ:.o=.d)
 
 all: $(PROJ).elf $(PROJ).hex $(PROJ).lss stats
 
+ifeq (,$(filter clean,$(MAKECMDGOALS)))
 -include $(DEP)
+endif
 
 music.cpp: $(addprefix songs/,$(addsuffix .inc,$(SONGS)))
 
