chore(fw): move ATtiny 85 code firmware code to separate directory

--- a/fw/att85/.cproject
+++ b/fw/att85/.cproject
@@ -42,7 +42,7 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="fw.null.6016006" name="fw"/>
+		<project id="att85.null.6016006" name="att85"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope"/>
