build(fw): move build artifacts to separate directory

--- a/fw/att85/Makefile
+++ b/fw/att85/Makefile
@@ -2,11 +2,7 @@
 
 LED_ORDER = red,green,blue
 
-CC     = avr-gcc
-CXX    = avr-g++
-OBJCPY = avr-objcopy
-OBJDMP = avr-objdump
-SIZE   = avr-size
+TOOLCHAIN_PREFIX = avr
 AD     = avrdude
 
 # GCC MCU
@@ -49,54 +45,47 @@ SONGS =  \
     silent_night  \
     jingle_bells
 
-CPPFLAGS  = -I. -DF_CPU=$(DEF_FREQ)UL -D__$(DEF_MCU)__ -DLED_ORDER=$(LED_ORDER)
-CFLAGS    = -c -ggdb -Os -Wall -Wno-array-bounds -mmcu=$(MCU)
-CXXFLAGS  = -c -ggdb -Os -Wall -Wno-array-bounds -mmcu=$(MCU) -std=c++14 -fno-exceptions
+DEFINE    = F_CPU=$(DEF_FREQ)UL __$(DEF_MCU)__ LED_ORDER=$(LED_ORDER)
+INCLUDE   = .
+CPPFLAGS  =
+CFLAGS    = -ggdb -Os -Wall -Wno-array-bounds -mmcu=$(MCU)
+CXXFLAGS  = -ggdb -Os -Wall -Wno-array-bounds -mmcu=$(MCU) -std=c++14 -fno-exceptions
 LDFLAGS   = -ggdb -Os -mmcu=$(MCU) -Wl,-Map=$(PROJ).map
 LDLIBS    =
 SIZEFLAGS = -C --mcu=$(MCU)
+BUILDDIR = build
+OUT = $(BUILDDIR)/$(PROJ).elf
+OUT_HEX = $(OUT:.elf=.hex)
+OUT_LSS = $(OUT:.elf=.lss)
 
 ################################################################################
-OBJ = $(addsuffix .o, $(basename $(SRC)))
-DEP = $(OBJ:.o=.d)
 
 .PHONY: all clean stats prog fuses
 
-all: $(PROJ).elf $(PROJ).hex $(PROJ).lss stats
+all: $(OUT) $(OUT_HEX) $(OUT_LSS) stats
 
-ifeq (,$(filter clean,$(MAKECMDGOALS)))
--include $(DEP)
-endif
+include ../rules.mk
 
 music.cpp: $(addprefix songs/,$(addsuffix .inc,$(SONGS)))
 
-stats: $(PROJ).elf
-	$(SIZE) $(SIZEFLAGS) $<
+stats: $(OUT)
+	$(SZ) $(SIZEFLAGS) $<
 
-prog: $(PROJ).hex
+prog: $(OUT_HEX)
 	$(AD) -c $(PROG) -p $(PART) -P $(PORT) -U flash:w:$<:i
 
 fuses:
 	$(AD) -c $(PROG) -p $(PART) -P $(PORT) -B 1000 -D           \
 	    -U lfuse:w:0xF1:m -U hfuse:w:0xDF:m -U efuse:w:0xFF:m
 
-$(PROJ).elf: $(OBJ)
-	$(CXX) $(LDFLAGS) $(OBJ) -o $@ $(LOADLIBES) $(LDLIBS)
+$(OUT_HEX): $(OUT)
+	$(OCP) -R .eeprom -O ihex $< $@
 
-$(PROJ).hex: $(PROJ).elf
-	$(OBJCPY) -R .eeprom -O ihex $< $@
-
-$(PROJ).lss: $(PROJ).elf
-	$(OBJDMP) -h -S $<  > $@
-
-%.d: %.c
-	$(CC) -MM $(CPPFLAGS) $(CFLAGS) $< -MF $@
-
-%.d: %.cpp
-	$(CXX) -MM $(CPPFLAGS) $(CXXFLAGS) $< -MF $@
+$(OUT_LSS): $(OUT)
+	$(ODP) -h -S $<  > $@
 
 clean:
-	$(RM) $(PROJ).elf $(PROJ).hex $(PROJ).lss $(OBJ) $(DEP) songs/*.inc
+	$(RM) $(CLEANUP) $(OUT_HEX) $(OUT_LSS) songs/*.inc
 
 %.inc: %.tune
 	python songs/compose.py $< -o $@
