chore(fw): generate LED data using PWM proof of concept

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -12,6 +12,7 @@ SRC  =  \
     support/syscalls.c  \
     support/system_stm32g0xx.c  \
     driver/base.cpp  \
+    driver/led_controller.cpp  \
     main.cpp
 
 DEFINE    = $(MCU_DEFINE)
