chore(fw): add status LED driver

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -18,6 +18,7 @@ SRC  =  \
     driver/ir_receiver.cpp  \
     driver/buzzer.cpp  \
     driver/keypad.cpp  \
+    driver/status_leds.cpp  \
     led_correction.cpp  \
     main.cpp
 
