chore(fw): add input processing component

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -20,6 +20,7 @@ SRC  =  \
     driver/keypad.cpp  \
     driver/status_leds.cpp  \
     led_correction.cpp  \
+    input.cpp  \
     main.cpp
 
 DEFINE    = $(MCU_DEFINE)
