chore(fw): add event queue

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -22,6 +22,7 @@ SRC  =  \
     input/keypad.cpp  \
     input/ir_remote.cpp  \
     led_correction.cpp  \
+    event_queue.cpp  \
     input.cpp  \
     main.cpp
 
