refactor(fw): move application logic to one object

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -24,6 +24,7 @@ SRC  =  \
     led_correction.cpp  \
     event_queue.cpp  \
     input.cpp  \
+    lights.cpp  \
     main.cpp
 
 ifeq ($(strip $(DBG)),yes)
