refactor(fw): move demo animation inside proper interface

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -21,6 +21,7 @@ SRC  =  \
     driver/status_leds.cpp  \
     input/keypad.cpp  \
     input/ir_remote.cpp  \
+    animation/rainbow.cpp  \
     led_correction.cpp  \
     event_queue.cpp  \
     input.cpp  \
