refactor(stm32g0): move shared DMA code into common driver

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -13,6 +13,7 @@ SRC  =  \
     support/system_stm32g0xx.c  \
     tools/button_filter.cpp  \
     driver/base.cpp  \
+    driver/common.cpp  \
     driver/systick.cpp  \
     driver/led_controller.cpp  \
     driver/ir_receiver.cpp  \
