refactor(stm32g0): use shared color tools in rainbow animation

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -38,6 +38,7 @@ SRC  =  \
     $(addprefix animation/,  \
         rainbow.cpp  \
     )  \
+    color_tools.cpp  \
     led_correction.cpp  \
     event_queue.cpp  \
     input.cpp  \
