feat(stm32g0): add basic color animation

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -37,6 +37,7 @@ SRC  =  \
     )  \
     $(addprefix animation/,  \
         rainbow.cpp  \
+        color.cpp  \
     )  \
     color_tools.cpp  \
     led_correction.cpp  \
