feat(stm32g0): implement key event handling

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -39,6 +39,7 @@ SRC  =  \
         rainbow.cpp  \
         color.cpp  \
     )  \
+    animation_storage.cpp  \
     color_tools.cpp  \
     led_correction.cpp  \
     event_queue.cpp  \
