chore(stm32g0): switch to VS Code project

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@
 *.launch
 RemoteSystemsTempFiles/
 
+# Language Server
+compile_commands.json
+.cache/
+
 # Ignore doxygen outputs
 */doxygen/*.files
 
