--- a/fw/stm32g0/.vscode/tasks.json
+++ b/fw/stm32g0/.vscode/tasks.json
@@ -1,54 +1,26 @@
 {
-  "version": "2.0.0",
-  "presentation": {
-    "panel": "dedicated",
-    "focus": true,
-    "revealProblems": "onProblem"
-  },
-  "tasks": [
-    {
-      "label": "Clean Project",
-      "type": "shell",
-      "command": "make clean",
-      "group": {
-        "kind": "build",
-        "isDefault": false
-      },
-      "detail": "Cleans all build files"
+    "version": "2.0.0",
+    "presentation": {
+        "panel": "dedicated",
+        "focus": true,
+        "revealProblems": "onProblem"
     },
-    {
-      "label": "Make Compile Commands",
-      "type": "shell",
-      "dependsOn": ["Clean Project"],
-      "command": "bear -- make -j8 -O DBG=yes ",
-      "group": {
-        "kind": "none",
-        "isDefault": false
-      },
-      "problemMatcher": ["$gcc"],
-      "detail": "Compiles project in Debug mode and generates compile_commands.json"
-    },
-    {
-      "label": "Build Debug",
-      "type": "shell",
-      "command": "bear --append -- make -j8 -O DBG=yes ",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "problemMatcher": ["$gcc"],
-      "detail": "Compiles project in Debug mode"
-    },
-    {
-      "label": "Build Release",
-      "type": "shell",
-      "command": "make -j8 -O DBG=no ",
-      "group": {
-        "kind": "build",
-        "isDefault": false
-      },
-      "problemMatcher": ["$gcc"],
-      "detail": "Compiles project in Release mode"
-    }
-  ]
+    "tasks": [
+        {
+            "label": "Build Debug",
+            "type": "shell",
+            "command": "make -j8 -O DBG=yes",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "detail": "Compiles project in Debug mode"
+        }
+    ]
 }
