refactor: use .hpp for C++ headers in shared directory

--- a/fw/att85/Makefile
+++ b/fw/att85/Makefile
@@ -29,7 +29,7 @@ SRC  =  \
     time_service.cpp  \
     buttons.cpp  \
     ir_receiver.cpp  \
-    ../shared/tools/button_filter.cpp  \
+    tools/button_filter.cpp  \
     tools/color.cpp  \
     tools/id_selector.cpp  \
     $(addprefix animations/,  \
