feat(stm32g0): add Lights animation

--- a/fw/stm32g0/Makefile
+++ b/fw/stm32g0/Makefile
@@ -45,6 +45,7 @@ SRC  =  \
             retro.cpp  \
             twinkle.cpp  \
             shifting_color.cpp  \
+            lights.cpp  \
         )  \
         music.cpp  \
         animation_storage.cpp  \
